ビュー関連の実装

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,13 +6,13 @@
     </ul>
     <ul class='lists-right'>
       <%# 以下、ユーザーログイン関係 %>
-      <%# <% if user_signed_in?  %> %>
-        <%# <li><%= link_to current_user.nickname, '#', class: "user-nickname" %></li> %>
-        <%# <li><%= link_to 'ログアウト', destroy_user_session_path , method: :delete, class: "logout" %></li>  %>
-      <%# <% else %> %>
-        <%# <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li> %>
-        <%# <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>  %>
-      <%# <% end %> %>
+      <% if user_signed_in?  %>
+        <li><%= link_to current_user.nickname, '#', class: "user-nickname" %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path , method: :delete, class: "logout" %></li> 
+      <% else %>
+        <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+        <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %> </li>
+      <% end %>
     </ul>
   </div>
 </header>
@@ -21,12 +21,12 @@
 </div>
 <div class='recipe-index'>
   <ul>
-      <% if .present? %>
-        <% .each do ||%>
+      <%# <% if .present? %> %>
+        <%# <% .each do ||%> %>
           <li class='list'>
-            <%= link_to _path(.id) do %>
+            <%# <%= link_to _path(.id) do %> %>
             <div class='-img-content'>
-              <%= image_tag .image, class: "-img" %>
+              <%# <%= image_tag .image, class: "-img" %> %>
             </div>
             <div class='-info'>
               <h3 class='-name'>
@@ -35,15 +35,15 @@
               <div class='-price'>
                 <span><%=  %><br></span>
                 <div class='star-btn'>
-                  <%= image_tag "star.png", class:"star-icon" %>
+                  <%# <%= image_tag "star.png", class:"star-icon" %> %>
                   <span class='star-count'>0</span>
                 </div>
               </div>
             </div>
-            <% end %>
+            <%# <% end %> %>
           </li>
-        <% end %>  
-      <% end %>
+        <%# <% end %>   %>
+      <%# <% end %> %>
   </ul>
 </div>
 <div calss='app-overview'>
